test/expr/bad-label-name-empty.txt
;;; ERROR: 1
(module (func (label $foo)))
(;; STDERR ;;;
expr/bad-label-name-empty.txt:2:26: syntax error, unexpected ), expecting (
;;; STDERR ;;)
